K8S_injector_demo/mgmt_injector/deployment/mutatingwebhook-ca-bundle.yaml
apiVersion: admissionregistration.k8s.io/v1beta1
kind: MutatingWebhookConfiguration
metadata:
  name: cyberark-sidecar-injector
  labels:
    app: cyberark-sidecar-injector
webhooks:
  - name: sidecar-injector.cyberark.com
    clientConfig:
      service:
        name: cyberark-sidecar-injector
        namespace: injectors
        path: "/mutate"
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUM2akNDQWRLZ0F3SUJBZ0lCQVRBTkJna3Foa2lHOXcwQkFRc0ZBREFtTVNRd0lnWURWUVFEREJ0dmNHVnUKYzJocFpuUXRjMmxuYm1WeVFERTFOek0xTmprM05URXdIaGNOTVRreE1URXlNVFEwTWpNd1doY05NalF4TVRFdwpNVFEwTWpNeFdqQW1NU1F3SWdZRFZRUUREQnR2Y0dWdWMyaHBablF0YzJsbmJtVnlRREUxTnpNMU5qazNOVEV3CmdnRWlNQTBHQ1NxR1NJYjNEUUVCQVFVQUE0SUJEd0F3Z2dFS0FvSUJBUUR3QmFRUGZWODNPV0lEM3pwRkozYTcKNk9SbHB0SmxTUlpIMTlLWVhocVAwMHlJbFMrOWYxZzAzYWt1dSsrOThVZDdBYURqYlJaaVpaRGthOW9taFFoVQpmZytnZ2EvR2hK [...]
    rules:
      - operations: [ "CREATE" ]
        apiGroups: [""]
        apiVersions: ["v1"]
        resources: ["pods"]
    namespaceSelector:
      matchLabels:
        cyberark-sidecar-injector: enabled
